Fixed Loading transition visibility bug
Bug(Loading screen element is still visible after loaded) fixed

--- a/index.css
+++ b/index.css
@@ -75,6 +75,9 @@ body {
 .transition--loaded {
   pointer-events: none;
   opacity: 0;
+  visibility: hidden;
+  width: 0px;
+  height: 0px;
 }
 
 .transition__logo {
